fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -7,11 +7,6 @@
   position: relative;
 }
 
-#main div:last-child {
-	margin-top: 10px;
-  max-height: 320px;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -161,6 +156,7 @@ header {
   margin-top: 8px;
   width: 100%;
   height: 100%;
+  max-height: 375px;
 }
 
 .keyboard-container,
